#10-review-of-01-04-lecture deleted:    01_Tensorflow/03_Workspace/.ipynb_checkpoints/01_Multi_Variable_Linear_Regression_with_manually-checkpoint.ipynb modified:   01_Tensorflow/03_Workspace/01_Multi_Variable_Linear_Regression_with_manually.ipynb modified:   01_Tensorflow/03_Workspace/02_Multi_Variable_Linear_Regression_with_Matrix.ipynb modified:   01_Tensorflow/03_Workspace/03_Multi_Variable_Linear_Regression_with_file.ipynb modified:   01_Tensorflow/03_Workspace/04_Multi_Variable_Linear_Regression_with_fileQueue.ipynb modified:   README.md

--- a/01_Tensorflow/03_Workspace/03_Multi_Variable_Linear_Regression_with_file.ipynb
+++ b/01_Tensorflow/03_Workspace/03_Multi_Variable_Linear_Regression_with_file.ipynb
@@ -53,7 +53,12 @@
    ],
    "source": [
     "xy = np.loadtxt('data-01-test-score.csv', delimiter=',', dtype=np.float32)\n",
-    "xy"
+    "xy\n",
+    "\n",
+    "# 1번째 학생이 1번째 시험에서 73점을 받음\n",
+    "# 1번째 학생이 2번째 시험에서 80점을 받음\n",
+    "# 1번째 학생이 3번째 시험에서 75점을 받음\n",
+    "# 1번째 학생이 기말고사에서 152점을 받음"
    ]
   },
   {
@@ -210,8 +215,8 @@
    ],
    "source": [
     "# Make sure the shape and data are OK\n",
-    "print(x_data.shape, x_data, len(x_data))\n",
-    "print(y_data.shape, y_data, len(y_data))"
+    "print(x_data.shape, x_data, len(x_data)) # 25명의 학생이 3번의 시험을 봄\n",
+    "print(y_data.shape, y_data, len(y_data)) # 25명의 학생이 기말고사를 1번만 봄"
    ]
   },
   {
@@ -258,7 +263,7 @@
    },
    "outputs": [],
    "source": [
-    "W = tf.Variable(tf.random_normal([3,1]), name='weight')\n",
+    "W = tf.Variable(tf.random_normal([3,1]), name='weight') \n",
     "b = tf.Variable(tf.random_normal([1]), name='bias')"
    ]
   },
@@ -271,7 +276,7 @@
    "outputs": [],
    "source": [
     "# Hypothesis\n",
-    "hypothesis = tf.matmul(X, W) + b"
+    "hypothesis = tf.matmul(X, W) + b # 행렬곱에서 행과 열의 갯수는 (25,3) * (3,1) = (25,1) 이다."
    ]
   },
   {
