--- a/01_Tensorflow/03_Workspace/04_Multi_Variable_Linear_Regression_with_fileQueue.ipynb
+++ b/01_Tensorflow/03_Workspace/04_Multi_Variable_Linear_Regression_with_fileQueue.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filename_queue = tf.train.string_input_producer(['data-01-test-score.csv'], shuffle=False, name='filename_queue')"
@@ -35,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set default values And Specifies the type of the decoded result\n",
@@ -46,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# collect batches of csv \n",
@@ -87,7 +93,7 @@
    "outputs": [],
    "source": [
     "# Hypothesis\n",
-    "hypothesis = tf.matmul(X, W) + b"
+    "hypothesis = tf.matmul(X, W) + b # 행렬곱에서 행과 열의 갯수는 (None,3) * (3,1) = (None,1) 이다."
    ]
   },
   {
@@ -148,216 +154,216 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 'Cost: ', 40754.039, '\\nPrediction:\\n', array([[-48.15549469],\n",
-      "       [-49.12400818],\n",
-      "       [-53.03891754],\n",
-      "       [-56.95539093],\n",
-      "       [-35.82605743],\n",
-      "       [-23.88764   ],\n",
-      "       [-43.69130707],\n",
-      "       [-34.18811035],\n",
-      "       [-42.75863647],\n",
-      "       [-36.86229706]], dtype=float32))\n",
-      "(100, 'Cost: ', 21.896589, '\\nPrediction:\\n', array([[ 149.96099854],\n",
-      "       [ 188.78887939],\n",
-      "       [ 181.48556519],\n",
-      "       [ 198.46606445],\n",
-      "       [ 145.56497192],\n",
-      "       [ 109.83066559],\n",
-      "       [ 147.56777954],\n",
-      "       [ 107.69974518],\n",
-      "       [ 179.54830933],\n",
-      "       [ 169.04406738]], dtype=float32))\n",
-      "(200, 'Cost: ', 20.913607, '\\nPrediction:\\n', array([[ 150.06910706],\n",
-      "       [ 188.68333435],\n",
-      "       [ 181.50299072],\n",
-      "       [ 198.48423767],\n",
-      "       [ 145.42657471],\n",
-      "       [ 109.69988251],\n",
-      "       [ 147.64630127],\n",
-      "       [ 107.85566711],\n",
-      "       [ 179.39408875],\n",
-      "       [ 168.87841797]], dtype=float32))\n",
-      "(300, 'Cost: ', 19.987871, '\\nPrediction:\\n', array([[ 150.17359924],\n",
-      "       [ 188.5809021 ],\n",
-      "       [ 181.51960754],\n",
-      "       [ 198.50204468],\n",
-      "       [ 145.29199219],\n",
-      "       [ 109.57354736],\n",
-      "       [ 147.72320557],\n",
-      "       [ 108.00830078],\n",
-      "       [ 179.24510193],\n",
-      "       [ 168.71940613]], dtype=float32))\n",
-      "(400, 'Cost: ', 19.115887, '\\nPrediction:\\n', array([[ 150.27462769],\n",
-      "       [ 188.48147583],\n",
-      "       [ 181.53543091],\n",
-      "       [ 198.51947021],\n",
-      "       [ 145.16110229],\n",
-      "       [ 109.45149994],\n",
-      "       [ 147.79849243],\n",
-      "       [ 108.15768433],\n",
-      "       [ 179.10116577],\n",
-      "       [ 168.56674194]], dtype=float32))\n",
-      "(500, 'Cost: ', 18.294468, '\\nPrediction:\\n', array([[ 150.37231445],\n",
-      "       [ 188.38497925],\n",
-      "       [ 181.55053711],\n",
-      "       [ 198.53652954],\n",
-      "       [ 145.03381348],\n",
-      "       [ 109.33358765],\n",
-      "       [ 147.87220764],\n",
-      "       [ 108.30387115],\n",
-      "       [ 178.96212769],\n",
-      "       [ 168.42016602]], dtype=float32))\n",
-      "(600, 'Cost: ', 17.520493, '\\nPrediction:\\n', array([[ 150.46676636],\n",
-      "       [ 188.29130554],\n",
-      "       [ 181.56494141],\n",
-      "       [ 198.55323792],\n",
-      "       [ 144.91000366],\n",
-      "       [ 109.21965027],\n",
-      "       [ 147.94438171],\n",
-      "       [ 108.4469223 ],\n",
-      "       [ 178.82775879],\n",
-      "       [ 168.27944946]], dtype=float32))\n",
-      "(700, 'Cost: ', 16.791033, '\\nPrediction:\\n', array([[ 150.55809021],\n",
-      "       [ 188.2003479 ],\n",
-      "       [ 181.57865906],\n",
-      "       [ 198.56956482],\n",
-      "       [ 144.78956604],\n",
-      "       [ 109.10954285],\n",
-      "       [ 148.01501465],\n",
-      "       [ 108.58689117],\n",
-      "       [ 178.69789124],\n",
-      "       [ 168.14430237]], dtype=float32))\n",
-      "(800, 'Cost: ', 16.103519, '\\nPrediction:\\n', array([[ 150.64642334],\n",
-      "       [ 188.11207581],\n",
-      "       [ 181.5917511 ],\n",
-      "       [ 198.58555603],\n",
-      "       [ 144.67242432],\n",
-      "       [ 109.00312805],\n",
-      "       [ 148.08416748],\n",
-      "       [ 108.72384644],\n",
-      "       [ 178.5723877 ],\n",
-      "       [ 168.01454163]], dtype=float32))\n",
-      "(900, 'Cost: ', 15.455383, '\\nPrediction:\\n', array([[ 150.73187256],\n",
-      "       [ 188.02633667],\n",
-      "       [ 181.60423279],\n",
-      "       [ 198.60121155],\n",
-      "       [ 144.55847168],\n",
-      "       [ 108.90026093],\n",
-      "       [ 148.15184021],\n",
-      "       [ 108.8578186 ],\n",
-      "       [ 178.45109558],\n",
-      "       [ 167.88990784]], dtype=float32))\n",
-      "(1000, 'Cost: ', 14.844267, '\\nPrediction:\\n', array([[ 150.81452942],\n",
-      "       [ 187.94309998],\n",
-      "       [ 181.61611938],\n",
-      "       [ 198.61654663],\n",
-      "       [ 144.44761658],\n",
-      "       [ 108.80082703],\n",
-      "       [ 148.21806335],\n",
-      "       [ 108.9888916 ],\n",
-      "       [ 178.33381653],\n",
-      "       [ 167.77020264]], dtype=float32))\n",
-      "(1100, 'Cost: ', 14.267984, '\\nPrediction:\\n', array([[ 150.89450073],\n",
-      "       [ 187.86225891],\n",
-      "       [ 181.62745667],\n",
-      "       [ 198.6315155 ],\n",
-      "       [ 144.33976746],\n",
-      "       [ 108.70468903],\n",
-      "       [ 148.28288269],\n",
-      "       [ 109.11708832],\n",
-      "       [ 178.22045898],\n",
-      "       [ 167.65522766]], dtype=float32))\n",
-      "(1200, 'Cost: ', 13.724421, '\\nPrediction:\\n', array([[ 150.97186279],\n",
-      "       [ 187.78373718],\n",
-      "       [ 181.63824463],\n",
-      "       [ 198.6461792 ],\n",
-      "       [ 144.23483276],\n",
-      "       [ 108.61174774],\n",
-      "       [ 148.34628296],\n",
-      "       [ 109.24250031],\n",
-      "       [ 178.11083984],\n",
-      "       [ 167.54473877]], dtype=float32))\n",
-      "(1300, 'Cost: ', 13.211734, '\\nPrediction:\\n', array([[ 151.04672241],\n",
-      "       [ 187.70750427],\n",
-      "       [ 181.64852905],\n",
-      "       [ 198.66052246],\n",
-      "       [ 144.13275146],\n",
-      "       [ 108.52186584],\n",
-      "       [ 148.4083252 ],\n",
-      "       [ 109.36514282],\n",
-      "       [ 178.00483704],\n",
-      "       [ 167.43862915]], dtype=float32))\n",
-      "(1400, 'Cost: ', 12.728027, '\\nPrediction:\\n', array([[ 151.1191864 ],\n",
-      "       [ 187.63343811],\n",
-      "       [ 181.65834045],\n",
-      "       [ 198.67456055],\n",
-      "       [ 144.03341675],\n",
-      "       [ 108.43493652],\n",
-      "       [ 148.46902466],\n",
-      "       [ 109.48508453],\n",
-      "       [ 177.90231323],\n",
-      "       [ 167.33666992]], dtype=float32))\n",
-      "(1500, 'Cost: ', 12.271627, '\\nPrediction:\\n', array([[ 151.1893158 ],\n",
-      "       [ 187.56150818],\n",
-      "       [ 181.66767883],\n",
-      "       [ 198.6882782 ],\n",
-      "       [ 143.93678284],\n",
-      "       [ 108.3508606 ],\n",
-      "       [ 148.52839661],\n",
-      "       [ 109.60238647],\n",
-      "       [ 177.80317688],\n",
-      "       [ 167.23867798]], dtype=float32))\n",
-      "(1600, 'Cost: ', 11.84094, '\\nPrediction:\\n', array([[ 151.25718689],\n",
-      "       [ 187.49162292],\n",
-      "       [ 181.67658997],\n",
-      "       [ 198.70169067],\n",
-      "       [ 143.84272766],\n",
-      "       [ 108.26953888],\n",
-      "       [ 148.58647156],\n",
-      "       [ 109.71708679],\n",
-      "       [ 177.70726013],\n",
-      "       [ 167.14453125]], dtype=float32))\n",
-      "(1700, 'Cost: ', 11.434436, '\\nPrediction:\\n', array([[ 151.32287598],\n",
-      "       [ 187.42370605],\n",
-      "       [ 181.68505859],\n",
-      "       [ 198.71481323],\n",
-      "       [ 143.75119019],\n",
-      "       [ 108.19086456],\n",
-      "       [ 148.64328003],\n",
-      "       [ 109.82923889],\n",
-      "       [ 177.61447144],\n",
-      "       [ 167.05404663]], dtype=float32))\n",
-      "(1800, 'Cost: ', 11.050806, '\\nPrediction:\\n', array([[ 151.38650513],\n",
-      "       [ 187.35777283],\n",
-      "       [ 181.69316101],\n",
-      "       [ 198.72766113],\n",
-      "       [ 143.66215515],\n",
-      "       [ 108.11475372],\n",
-      "       [ 148.69885254],\n",
-      "       [ 109.93889618],\n",
-      "       [ 177.52471924],\n",
-      "       [ 166.96707153]], dtype=float32))\n",
-      "(1900, 'Cost: ', 10.688579, '\\nPrediction:\\n', array([[ 151.44810486],\n",
-      "       [ 187.29368591],\n",
-      "       [ 181.70085144],\n",
-      "       [ 198.7401886 ],\n",
-      "       [ 143.57545471],\n",
-      "       [ 108.04110718],\n",
-      "       [ 148.75318909],\n",
-      "       [ 110.04611206],\n",
-      "       [ 177.43785095],\n",
-      "       [ 166.88346863]], dtype=float32))\n",
-      "(2000, 'Cost: ', 10.346624, '\\nPrediction:\\n', array([[ 151.50772095],\n",
-      "       [ 187.23139954],\n",
-      "       [ 181.70817566],\n",
-      "       [ 198.75245667],\n",
-      "       [ 143.49110413],\n",
-      "       [ 107.969841  ],\n",
-      "       [ 148.80633545],\n",
-      "       [ 110.15093231],\n",
-      "       [ 177.3538208 ],\n",
-      "       [ 166.80310059]], dtype=float32))\n"
+      "(0, 'Cost: ', 175699.08, '\\nPrediction:\\n', array([[-244.53662109],\n",
+      "       [-304.20327759],\n",
+      "       [-294.2902832 ],\n",
+      "       [-323.09188843],\n",
+      "       [-232.27223206],\n",
+      "       [-176.13139343],\n",
+      "       [-242.56671143],\n",
+      "       [-180.59992981],\n",
+      "       [-289.68759155],\n",
+      "       [-274.75057983]], dtype=float32))\n",
+      "(100, 'Cost: ', 53.86433, '\\nPrediction:\\n', array([[ 159.57720947],\n",
+      "       [ 182.08728027],\n",
+      "       [ 184.54443359],\n",
+      "       [ 198.57609558],\n",
+      "       [ 138.59939575],\n",
+      "       [  97.64398956],\n",
+      "       [ 148.02508545],\n",
+      "       [ 109.09072876],\n",
+      "       [ 165.14151001],\n",
+      "       [ 146.98323059]], dtype=float32))\n",
+      "(200, 'Cost: ', 49.212082, '\\nPrediction:\\n', array([[ 159.29504395],\n",
+      "       [ 182.22964478],\n",
+      "       [ 184.42366028],\n",
+      "       [ 198.60194397],\n",
+      "       [ 138.69778442],\n",
+      "       [  98.01564789],\n",
+      "       [ 148.1434021 ],\n",
+      "       [ 109.30250549],\n",
+      "       [ 165.57858276],\n",
+      "       [ 147.77902222]], dtype=float32))\n",
+      "(300, 'Cost: ', 44.983192, '\\nPrediction:\\n', array([[ 159.02572632],\n",
+      "       [ 182.36531067],\n",
+      "       [ 184.30827332],\n",
+      "       [ 198.6267395 ],\n",
+      "       [ 138.79125977],\n",
+      "       [  98.37039185],\n",
+      "       [ 148.25680542],\n",
+      "       [ 109.50563049],\n",
+      "       [ 165.9957428 ],\n",
+      "       [ 148.5390625 ]], dtype=float32))\n",
+      "(400, 'Cost: ', 41.139755, '\\nPrediction:\\n', array([[ 158.76869202],\n",
+      "       [ 182.49456787],\n",
+      "       [ 184.19804382],\n",
+      "       [ 198.6505127 ],\n",
+      "       [ 138.88005066],\n",
+      "       [  98.70896149],\n",
+      "       [ 148.36553955],\n",
+      "       [ 109.70041656],\n",
+      "       [ 166.3939209 ],\n",
+      "       [ 149.26498413]], dtype=float32))\n",
+      "(500, 'Cost: ', 37.647236, '\\nPrediction:\\n', array([[ 158.52342224],\n",
+      "       [ 182.61773682],\n",
+      "       [ 184.0927124 ],\n",
+      "       [ 198.67332458],\n",
+      "       [ 138.96440125],\n",
+      "       [  99.03212738],\n",
+      "       [ 148.46981812],\n",
+      "       [ 109.88725281],\n",
+      "       [ 166.77397156],\n",
+      "       [ 149.95831299]], dtype=float32))\n",
+      "(600, 'Cost: ', 34.474323, '\\nPrediction:\\n', array([[ 158.28933716],\n",
+      "       [ 182.73504639],\n",
+      "       [ 183.99211121],\n",
+      "       [ 198.69520569],\n",
+      "       [ 139.04449463],\n",
+      "       [  99.34056854],\n",
+      "       [ 148.5697937 ],\n",
+      "       [ 110.06647491],\n",
+      "       [ 167.13670349],\n",
+      "       [ 150.6204834 ]], dtype=float32))\n",
+      "(700, 'Cost: ', 31.592169, '\\nPrediction:\\n', array([[ 158.06599426],\n",
+      "       [ 182.84683228],\n",
+      "       [ 183.89601135],\n",
+      "       [ 198.71620178],\n",
+      "       [ 139.12054443],\n",
+      "       [  99.63495636],\n",
+      "       [ 148.66569519],\n",
+      "       [ 110.23840332],\n",
+      "       [ 167.48292542],\n",
+      "       [ 151.25296021]], dtype=float32))\n",
+      "(800, 'Cost: ', 28.974964, '\\nPrediction:\\n', array([[ 157.85281372],\n",
+      "       [ 182.95330811],\n",
+      "       [ 183.80413818],\n",
+      "       [ 198.73629761],\n",
+      "       [ 139.19271851],\n",
+      "       [  99.91590118],\n",
+      "       [ 148.75761414],\n",
+      "       [ 110.40332794],\n",
+      "       [ 167.81330872],\n",
+      "       [ 151.85694885]], dtype=float32))\n",
+      "(900, 'Cost: ', 26.598621, '\\nPrediction:\\n', array([[ 157.64941406],\n",
+      "       [ 183.05471802],\n",
+      "       [ 183.71641541],\n",
+      "       [ 198.75563049],\n",
+      "       [ 139.26126099],\n",
+      "       [ 100.18405151],\n",
+      "       [ 148.8458252 ],\n",
+      "       [ 110.56156921],\n",
+      "       [ 168.12866211],\n",
+      "       [ 152.43385315]], dtype=float32))\n",
+      "(1000, 'Cost: ', 24.44162, '\\nPrediction:\\n', array([[ 157.45532227],\n",
+      "       [ 183.15130615],\n",
+      "       [ 183.63258362],\n",
+      "       [ 198.77415466],\n",
+      "       [ 139.32629395],\n",
+      "       [ 100.43994904],\n",
+      "       [ 148.9303894 ],\n",
+      "       [ 110.71340179],\n",
+      "       [ 168.42961121],\n",
+      "       [ 152.9848175 ]], dtype=float32))\n",
+      "(1100, 'Cost: ', 22.48411, '\\nPrediction:\\n', array([[ 157.2701416 ],\n",
+      "       [ 183.24333191],\n",
+      "       [ 183.55253601],\n",
+      "       [ 198.79194641],\n",
+      "       [ 139.38801575],\n",
+      "       [ 100.68417358],\n",
+      "       [ 149.0115509 ],\n",
+      "       [ 110.85909271],\n",
+      "       [ 168.71684265],\n",
+      "       [ 153.51106262]], dtype=float32))\n",
+      "(1200, 'Cost: ', 20.708263, '\\nPrediction:\\n', array([[ 157.09341431],\n",
+      "       [ 183.33094788],\n",
+      "       [ 183.47602844],\n",
+      "       [ 198.80900574],\n",
+      "       [ 139.44654846],\n",
+      "       [ 100.91724396],\n",
+      "       [ 149.08937073],\n",
+      "       [ 110.99890137],\n",
+      "       [ 168.99092102],\n",
+      "       [ 154.01361084]], dtype=float32))\n",
+      "(1300, 'Cost: ', 19.097523, '\\nPrediction:\\n', array([[ 156.92480469],\n",
+      "       [ 183.41436768],\n",
+      "       [ 183.40293884],\n",
+      "       [ 198.8253479 ],\n",
+      "       [ 139.5020752 ],\n",
+      "       [ 101.13964081],\n",
+      "       [ 149.16404724],\n",
+      "       [ 111.1330719 ],\n",
+      "       [ 169.25250244],\n",
+      "       [ 154.49359131]], dtype=float32))\n",
+      "(1400, 'Cost: ', 17.6371, '\\nPrediction:\\n', array([[ 156.76391602],\n",
+      "       [ 183.49378967],\n",
+      "       [ 183.33309937],\n",
+      "       [ 198.84107971],\n",
+      "       [ 139.55471802],\n",
+      "       [ 101.35186768],\n",
+      "       [ 149.23568726],\n",
+      "       [ 111.26183319],\n",
+      "       [ 169.50210571],\n",
+      "       [ 154.95198059]], dtype=float32))\n",
+      "(1500, 'Cost: ', 16.313272, '\\nPrediction:\\n', array([[ 156.61044312],\n",
+      "       [ 183.56942749],\n",
+      "       [ 183.26641846],\n",
+      "       [ 198.85617065],\n",
+      "       [ 139.60464478],\n",
+      "       [ 101.55439758],\n",
+      "       [ 149.30445862],\n",
+      "       [ 111.38543701],\n",
+      "       [ 169.74032593],\n",
+      "       [ 155.38978577]], dtype=float32))\n",
+      "(1600, 'Cost: ', 15.113751, '\\nPrediction:\\n', array([[ 156.46400452],\n",
+      "       [ 183.64143372],\n",
+      "       [ 183.20266724],\n",
+      "       [ 198.87063599],\n",
+      "       [ 139.65196228],\n",
+      "       [ 101.74765778],\n",
+      "       [ 149.3704071 ],\n",
+      "       [ 111.5040741 ],\n",
+      "       [ 169.96760559],\n",
+      "       [ 155.80787659]], dtype=float32))\n",
+      "(1700, 'Cost: ', 14.027194, '\\nPrediction:\\n', array([[ 156.32427979],\n",
+      "       [ 183.7099762 ],\n",
+      "       [ 183.14176941],\n",
+      "       [ 198.88452148],\n",
+      "       [ 139.6967926 ],\n",
+      "       [ 101.93206024],\n",
+      "       [ 149.4336853 ],\n",
+      "       [ 111.6179657 ],\n",
+      "       [ 170.18447876],\n",
+      "       [ 156.20716858]], dtype=float32))\n",
+      "(1800, 'Cost: ', 13.043315, '\\nPrediction:\\n', array([[ 156.19099426],\n",
+      "       [ 183.77522278],\n",
+      "       [ 183.08360291],\n",
+      "       [ 198.89787292],\n",
+      "       [ 139.73928833],\n",
+      "       [ 102.10800934],\n",
+      "       [ 149.4944458 ],\n",
+      "       [ 111.72730255],\n",
+      "       [ 170.39144897],\n",
+      "       [ 156.58851624]], dtype=float32))\n",
+      "(1900, 'Cost: ', 12.152809, '\\nPrediction:\\n', array([[ 156.06384277],\n",
+      "       [ 183.83731079],\n",
+      "       [ 183.02804565],\n",
+      "       [ 198.91067505],\n",
+      "       [ 139.7795105 ],\n",
+      "       [ 102.27589417],\n",
+      "       [ 149.55274963],\n",
+      "       [ 111.83229065],\n",
+      "       [ 170.58891296],\n",
+      "       [ 156.95271301]], dtype=float32))\n",
+      "(2000, 'Cost: ', 11.347143, '\\nPrediction:\\n', array([[ 155.94255066],\n",
+      "       [ 183.89640808],\n",
+      "       [ 182.97492981],\n",
+      "       [ 198.92297363],\n",
+      "       [ 139.81761169],\n",
+      "       [ 102.4360733 ],\n",
+      "       [ 149.60870361],\n",
+      "       [ 111.93309784],\n",
+      "       [ 170.77731323],\n",
+      "       [ 157.30050659]], dtype=float32))\n"
      ]
     }
    ],
