--- a/01_Local_Tensorflow_Official_Docker/02_Workspace/04_4th_Example/04_Multi_Variable_Linear_Regression_with_fileQueue.ipynb
+++ b/01_Local_Tensorflow_Official_Docker/02_Workspace/04_4th_Example/04_Multi_Variable_Linear_Regression_with_fileQueue.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "# placeholders for a tensor that will be alwats fed\n",
+    "# placeholders for a tensor that will be always fed\n",
     "X = tf.placeholder(tf.float32, shape=[None, 3])\n",
     "Y = tf.placeholder(tf.float32, shape=[None, 1])"
    ]
