#13-01-example-05-modify modified:   01_Local_Tensorflow_Official_Docker/02_Workspace/05_5th_Example/05_Multi_Variable_Linear_Regression_with_file_Hattrick_KP.ipynb

--- a/01_Local_Tensorflow_Official_Docker/02_Workspace/05_5th_Example/05_Multi_Variable_Linear_Regression_with_file_Hattrick_KP.ipynb
+++ b/01_Local_Tensorflow_Official_Docker/02_Workspace/05_5th_Example/05_Multi_Variable_Linear_Regression_with_file_Hattrick_KP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xy = np.loadtxt('01_KP.csv', delimiter=',', dtype=np.float32)\n",
@@ -23,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_data = xy[:,0:-1]\n",
@@ -33,8 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_data = xy[:,[-1]]\n",
@@ -43,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Make sure the shape and data are OK\n",
@@ -54,8 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf"
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -149,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -161,9 +171,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\t2.10019e+12\n",
+      "5000000\t55452.0\n",
+      "10000000\t6251.52\n",
+      "15000000\t3178.84\n",
+      "20000000\t2989.77\n",
+      "25000000\t2989.77\n",
+      "30000000\t2989.77\n",
+      "35000000\t2989.77\n",
+      "40000000\t2989.77\n",
+      "45000000\t2989.77\n",
+      "50000000\t2989.77\n",
+      "55000000\t2989.77\n",
+      "60000000\t2989.77\n",
+      "65000000\t2989.77\n",
+      "70000000\t2989.77\n",
+      "75000000\t2989.77\n",
+      "80000000\t2989.77\n",
+      "85000000\t2989.77\n",
+      "90000000\t2989.77\n",
+      "95000000\t2989.77\n",
+      "100000000\t2989.77\n",
+      "105000000\t2989.77\n",
+      "110000000\t2989.77\n",
+      "115000000\t2989.77\n",
+      "120000000\t2989.77\n",
+      "125000000\t2989.77\n",
+      "130000000\t2989.77\n",
+      "135000000\t2989.77\n",
+      "140000000\t2989.77\n",
+      "145000000\t2989.77\n",
+      "150000000\t2989.77\n",
+      "[[ 423.19509888]\n",
+      " [ 243.03749084]\n",
+      " [ 410.62942505]\n",
+      " [ 244.54579163]\n",
+      " [ 449.89468384]\n",
+      " [ 281.72058105]\n",
+      " [ 430.23001099]\n",
+      " [ 283.2288208 ]\n",
+      " [ 475.08828735]\n",
+      " [ 320.48065186]\n",
+      " [ 449.00698853]\n",
+      " [ 321.9888916 ]\n",
+      " [ 499.9289856 ]\n",
+      " [ 385.4831543 ]\n",
+      " [ 477.22335815]\n",
+      " [ 385.4831543 ]\n",
+      " [ 286.22994995]\n",
+      " [ 286.22994995]\n",
+      " [ 317.08163452]\n",
+      " [ 317.08163452]\n",
+      " [ 282.89938354]\n",
+      " [ 315.02346802]\n",
+      " [ 279.56881714]\n",
+      " [ 315.02346802]\n",
+      " [ 279.56881714]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up feed_dict variables inside the loop\n",
     "from math import pow\n",
@@ -179,9 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Your score will be ', array([[ 423.19509888]], dtype=float32))\n",
+      "('Your score will be ', array([[ 243.03749084]], dtype=float32))\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask my score\n",
     "print(\"Your score will be \", sess.run(hypothesis, feed_dict={X: [[7600,4,3,7,7,20,8,3,1,1,1,1,6,877,1970000]]})) # 500\n",
@@ -190,9 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.client.session.Session at 0x7fb871725fd0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sess.close()\n",
     "sess"
