--- a/03_InSpace_Keras_Tutorial/01_Install_Keras/02_Check_Library_Version.ipynb
+++ b/03_InSpace_Keras_Tutorial/01_Install_Keras/02_Check_Library_Version.ipynb
@@ -9,23 +9,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scipy 0.19.1\n",
-      "numpy 1.12.1\n",
-      "matplotlib 2.0.2\n",
-      "pandas 0.20.3\n",
-      "sklearn 0.19.0\n",
-      "pydot 1.0.28\n",
-      "h5py 2.7.0\n",
-      "theano 0.9.0.dev-c697eeab84e5b8a74908da654b66ec9eca4f1291\n",
-      "tensorflow 1.0.0\n",
-      "keras 2.0.6\n"
+      "scipy 1.0.0\n",
+      "numpy 1.13.3\n",
+      "matplotlib 2.1.0\n",
+      "pandas 0.21.0\n",
+      "sklearn 0.19.1\n",
+      "pydot 1.2.3\n",
+      "h5py 2.7.1\n",
+      "theano 1.0.1\n",
+      "tensorflow 1.4.1\n",
+      "keras 2.1.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -58,21 +65,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
