#29-history-by-tensorflow modified:   03_InSpace_Keras_Tutorial/02_DL_Concept/03_01_history_by_fit.ipynb new file:   03_InSpace_Keras_Tutorial/02_DL_Concept/03_02_history_by_tensorboard.ipynb new file:   03_InSpace_Keras_Tutorial/02_DL_Concept/graph/events.out.tfevents.1513186046.48d1c40dbdf8 new file:   03_InSpace_Keras_Tutorial/99_Util/ds_docker_start_keras.sh modified:   README.md

--- a/03_InSpace_Keras_Tutorial/02_DL_Concept/03_01_history_by_fit.ipynb
+++ b/03_InSpace_Keras_Tutorial/02_DL_Concept/03_01_history_by_fit.ipynb
@@ -14,11 +14,14 @@
     }
    ],
    "source": [
+    "# 0. 사용할 패키지 불러오기\n",
     "from keras.utils import np_utils\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Activation\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(3)"
    ]
   },
   {
@@ -27,8 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(3)\n",
-    "\n",
     "# 1. 데이터셋 준비하기\n",
     "\n",
     "# 훈련셋과 시험셋 로딩\n",
@@ -40,6 +41,7 @@
     "X_train = X_train[:50000]\n",
     "Y_train = Y_train[:50000]\n",
     "\n",
+    "# 데이터셋 전처리\n",
     "X_train = X_train.reshape(50000, 784).astype('float32') / 255.0\n",
     "X_val = X_val.reshape(10000, 784).astype('float32') / 255.0\n",
     "X_test = X_test.reshape(10000, 784).astype('float32') / 255.0\n",
@@ -47,13 +49,12 @@
     "# 훈련셋, 검증셋 고르기\n",
     "train_rand_idxs = np.random.choice(50000, 700)\n",
     "val_rand_idxs = np.random.choice(10000, 300)\n",
-    "\n",
     "X_train = X_train[train_rand_idxs]\n",
     "Y_train = Y_train[train_rand_idxs]\n",
     "X_val = X_val[val_rand_idxs]\n",
     "Y_val = Y_val[val_rand_idxs]\n",
     "\n",
-    "# 라벨링 전환\n",
+    "# 라벨데이터 one-hot encoding 처리\n",
     "Y_train = np_utils.to_categorical(Y_train)\n",
     "Y_val = np_utils.to_categorical(Y_val)\n",
     "Y_test = np_utils.to_categorical(Y_test)"
@@ -209,13 +210,7 @@
       "700/700 [==============================] - 0s 284us/step - loss: 1.7616 - acc: 0.2557 - val_loss: 1.8347 - val_acc: 0.2267\n",
       "Epoch 59/1000\n",
       "700/700 [==============================] - 0s 290us/step - loss: 1.7590 - acc: 0.2671 - val_loss: 1.8329 - val_acc: 0.2233\n",
-      "Epoch 60/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/1000\n",
       "700/700 [==============================] - 0s 308us/step - loss: 1.7552 - acc: 0.2614 - val_loss: 1.8256 - val_acc: 0.2500\n",
       "Epoch 61/1000\n",
       "700/700 [==============================] - 0s 256us/step - loss: 1.7566 - acc: 0.2814 - val_loss: 1.8336 - val_acc: 0.2400\n",
@@ -457,13 +452,7 @@
       "700/700 [==============================] - 0s 244us/step - loss: 1.6143 - acc: 0.3229 - val_loss: 1.8397 - val_acc: 0.2633\n",
       "Epoch 177/1000\n",
       "700/700 [==============================] - 0s 290us/step - loss: 1.6134 - acc: 0.3400 - val_loss: 1.8382 - val_acc: 0.2167\n",
-      "Epoch 178/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 178/1000\n",
       "700/700 [==============================] - 0s 277us/step - loss: 1.6139 - acc: 0.3371 - val_loss: 1.8444 - val_acc: 0.2267\n",
       "Epoch 179/1000\n",
       "700/700 [==============================] - 0s 296us/step - loss: 1.6135 - acc: 0.3414 - val_loss: 1.8378 - val_acc: 0.2233\n",
@@ -705,13 +694,7 @@
       "700/700 [==============================] - 0s 255us/step - loss: 1.5497 - acc: 0.3543 - val_loss: 1.9005 - val_acc: 0.2567\n",
       "Epoch 295/1000\n",
       "700/700 [==============================] - 0s 287us/step - loss: 1.5499 - acc: 0.3657 - val_loss: 1.9121 - val_acc: 0.2200\n",
-      "Epoch 296/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 296/1000\n",
       "700/700 [==============================] - 0s 296us/step - loss: 1.5495 - acc: 0.3571 - val_loss: 1.9109 - val_acc: 0.2133\n",
       "Epoch 297/1000\n",
       "700/700 [==============================] - 0s 302us/step - loss: 1.5479 - acc: 0.3571 - val_loss: 1.9131 - val_acc: 0.2167\n",
@@ -953,13 +936,7 @@
       "700/700 [==============================] - 0s 532us/step - loss: 1.5049 - acc: 0.3843 - val_loss: 1.9719 - val_acc: 0.2233\n",
       "Epoch 413/1000\n",
       "700/700 [==============================] - 0s 616us/step - loss: 1.5033 - acc: 0.3757 - val_loss: 1.9752 - val_acc: 0.2333\n",
-      "Epoch 414/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 414/1000\n",
       "700/700 [==============================] - 0s 488us/step - loss: 1.5043 - acc: 0.3800 - val_loss: 1.9843 - val_acc: 0.2333\n",
       "Epoch 415/1000\n",
       "700/700 [==============================] - 0s 424us/step - loss: 1.5015 - acc: 0.3771 - val_loss: 1.9780 - val_acc: 0.2333\n",
@@ -1201,13 +1178,7 @@
       "700/700 [==============================] - 0s 312us/step - loss: 1.4686 - acc: 0.4014 - val_loss: 2.0408 - val_acc: 0.2267\n",
       "Epoch 531/1000\n",
       "700/700 [==============================] - 0s 315us/step - loss: 1.4688 - acc: 0.3957 - val_loss: 2.0247 - val_acc: 0.2433\n",
-      "Epoch 532/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 532/1000\n",
       "700/700 [==============================] - 0s 300us/step - loss: 1.4690 - acc: 0.4014 - val_loss: 2.0351 - val_acc: 0.2433\n",
       "Epoch 533/1000\n",
       "700/700 [==============================] - 0s 292us/step - loss: 1.4685 - acc: 0.4014 - val_loss: 2.0305 - val_acc: 0.2300\n",
@@ -1449,13 +1420,7 @@
       "700/700 [==============================] - 0s 287us/step - loss: 1.4432 - acc: 0.4086 - val_loss: 2.0864 - val_acc: 0.2333\n",
       "Epoch 649/1000\n",
       "700/700 [==============================] - 0s 272us/step - loss: 1.4415 - acc: 0.4057 - val_loss: 2.0825 - val_acc: 0.2333\n",
-      "Epoch 650/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 650/1000\n",
       "700/700 [==============================] - 0s 289us/step - loss: 1.4432 - acc: 0.4143 - val_loss: 2.0747 - val_acc: 0.2333\n",
       "Epoch 651/1000\n",
       "700/700 [==============================] - 0s 266us/step - loss: 1.4420 - acc: 0.4171 - val_loss: 2.0873 - val_acc: 0.2400\n",
@@ -1697,13 +1662,7 @@
       "700/700 [==============================] - 0s 306us/step - loss: 1.4218 - acc: 0.4229 - val_loss: 2.1156 - val_acc: 0.2400\n",
       "Epoch 767/1000\n",
       "700/700 [==============================] - 0s 316us/step - loss: 1.4217 - acc: 0.4257 - val_loss: 2.1167 - val_acc: 0.2333\n",
-      "Epoch 768/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 768/1000\n",
       "700/700 [==============================] - 0s 357us/step - loss: 1.4204 - acc: 0.4286 - val_loss: 2.1062 - val_acc: 0.2400\n",
       "Epoch 769/1000\n",
       "700/700 [==============================] - 0s 307us/step - loss: 1.4206 - acc: 0.4229 - val_loss: 2.1179 - val_acc: 0.2333\n",
@@ -1945,13 +1904,7 @@
       "700/700 [==============================] - 0s 323us/step - loss: 1.4026 - acc: 0.4314 - val_loss: 2.1799 - val_acc: 0.2533\n",
       "Epoch 885/1000\n",
       "700/700 [==============================] - 0s 260us/step - loss: 1.4031 - acc: 0.4314 - val_loss: 2.1445 - val_acc: 0.2433\n",
-      "Epoch 886/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 886/1000\n",
       "700/700 [==============================] - 0s 270us/step - loss: 1.4034 - acc: 0.4386 - val_loss: 2.1679 - val_acc: 0.2467\n",
       "Epoch 887/1000\n",
       "700/700 [==============================] - 0s 299us/step - loss: 1.4026 - acc: 0.4371 - val_loss: 2.1631 - val_acc: 0.2400\n",
